--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
   <title>Grid Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <script src="main.js"></script>
+  <link rel="icon"  type="image/png"    href="/img/favicon-16x16.png">
 </head>
 <body>
   <header id="showcase" class="grid">
     <div class="bg-image"></div>
-    <h1>Welcome to Grid Solutions</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ipsa corrupti, distinctio cum nobis, quas ipsum quod autem non in quisquam expedita quis debitis facilis! Officia voluptas rerum dolor quo expedita fuga recusandae in illo?</p>
-    <a href="#section-a" class="btn">Read More</a>
+      <div class="content-wrap">
+      <h1>Welcome to Grid Solutions</h1>
+      <p>We do all things grids. Like, seriously any types or kinds or varieties of grids imaginable ...</p>
+      <a href="#section-c" class="btn">Eh, what?</a>
+    </div>
   </header>
   <main id="main">
-    <section id="section" class="grid">
+    <!-- Section A -->
+    <section id="section-a" class="grid">
       <div class="content-wrap">
         <h2 class="content-title">Web & Application Development</h2>
+        <div class="content-text">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem suscipit, ut odit architecto eos ducimus tenetur dolorum sunt quis veniam qui, eligendi id libero, est perspiciatis ad vel rem praesentium consequatur similique aspernatur? Soluta non, consectetur id dolorum dolor aspernatur.</p>
+        </div>
       </div>
     </section>
+    <!-- Section B -->
     <section id="section-b" class="grid">
       <ul>
         <li>
@@ -35,7 +41,7 @@
         </li>
         <li>
           <div class="card">
-            <img src="img/blueCity2.jpg" alt="">
+            <img src="img/blueCity4.jpg" alt="">
           </div>
           <div class="card-content">
             <h3 class="card-title">Electrical Grids</h3>
@@ -44,39 +50,42 @@
         </li>
         <li>
           <div class="card">
-            <img src="img/blueCity1.jpg" alt="">
+            <img src="img/blueCity2.jpg" alt="">
           </div>
           <div class="card-content">
             <h3 class="card-title">Waffle Grids</h3>
-            <p>IKR. They are just so tasty. We are all fascinated by them.</p>
+            <p>IKR. They are just so tasty and oh so fattening. I eat a ton of them even though I'm on a diet. I crave them all the time. I'm sure everyone does.</p>
           </div>
         </li>
       </ul>
     </section>
-    <section class="grid">
+    <!-- Section C  -->
+    <section id="section-c" class="grid">
       <div class="content-wrap">
         <h2 class="content-title">We handle all of your digital needs</h2>
+          <p>We have to put temporary lorem ipsum texts here because we are yet to come up with something witty or interesting or tasty, if you can taste words that is.</p> <p>Loooooooooooreem ipsum dolor sit amet consectetur, adipisicing elit. Vel, dicta. Dolores inventore odio beatae recusandae at quia cumque sed perspiciatis. Quos sed eius possimus soluta?</p>
+          <p>Mollitia quos ex qui, suscipit alias nemo delectus excepturi laudantium assumenda facere totam ipsa repellat officiis. Velit debitis consectetur aliquid? Quaerat harum animi itaque temporibus.</p>
+          
       </div>
     </section>
+    <!-- Section D -->
     <section id="section-d" class="grid">
       <div class="box">
         <h2 class="content-title">Contact Us</h2>
+        <p>This website was created by Hilary Manuel for demonstration purposes only. And no, I am not obssessed with grids and I don't eat that much waffles but I do think they're yummy.</p>
+        <p><small><address>yayan@hilarymanuel.com</address></small></p>
       </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sit eveniet voluptatum quis. Et, asperiores iusto eos repellat perferendis sed?</p>
-      </div>
-      <p>
-        <small><address>yayan@hilarymanuel.com</address></small>
-      </p>
       <div class="box">
         <h2 class="content-title">About Our Company</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolorem in pariatur nostrum illo laudantium repellendus deleniti, facere vero fuga nam veritatis eos, atque dignissimos quos aliquid doloremque id delectus?</p>
+        <p><strong>TLDR;</strong> it is non-existent.</p>
       </div>
     </section>
   </main>
 
   <footer id="main-footer" class="grid">
     <div>Grid Solutions</div>
-    <div>Project by <a href="hilarymanuel.com">Hilary Manuel</a></div>
+    <div>Project by <a href="http://www.hilarymanuel.com/">Hilary Manuel</a></div>
   </footer>
 
 </body>
